--- a/.github/workflows/report.yml
+++ b/.github/workflows/report.yml
@@ -1,13 +1,14 @@
-# Auto-report action script, 3 times a day
+# Auto-report action script
 
 name: Auto-report action
 
-on: 
+on:
   push:
     branches:
       - master
   schedule:
-    - cron: '15 4,11,23 * * *'
+    - cron: '30 0 * * *'
+
 
 jobs:
   build:
@@ -28,5 +29,6 @@ jobs:
       env:
         STUID: ${{ secrets.Stuid }}
         PASSWORD: ${{ secrets.Password }}
+        JINJI: ${{ secrets.Jinji }}
       run: |
-        python report.py data.json "$STUID" "$PASSWORD"
+        python report.py data.json "$STUID" "$PASSWORD" "$JINJI"
